# agent-search-gateway

./: .env.example  .gitignore  CHANGELOG.md  README.ja.md  README.md  README.zh.md  THIRD_PARTY_NOTICES.md  docker-compose.image.yml  docker-compose.yml  handoff.md  pyproject.toml
.cursor/rules/: agent-search-gateway.mdc
.github/workflows/: ci.yml  docker-image.yml  dockerhub-description.yml
api/: .dockerignore  Dockerfile  __init__.py  cache.py  config.py  extraction.py  main.py  models.py  quota.py  requirements-reranker.txt  requirements.txt  rerank.py  summary.py  text_utils.py
api/providers/: __init__.py  searxng.py  tavily.py
docs/: DOCKER_HUB.md  DOCKER_HUB_OVERVIEW.md  ENVIRONMENT.md  NEXT_STEPS.md  PROJECT_NOTES.md  ROADMAP.md
docs/integrations/: agent-clients.md
docs/wechat-article/: README.md  article-draft.md  article-title.txt  article-wechat-body-no-images.html  article-wechat-body-plain.txt  article-wechat-body.html  article-wechat-copy-no-images.html  article-wechat-copy.html  article-wechat-ready-no-images.html  article-wechat-ready.html  article-wechat-ready.md  image-production-pack.md  render-wechat-html.mjs  research-notes.md
integrations/: __init__.py
integrations/cursor/: agent-search-gateway-user-rule.mdc
integrations/mcp/: __init__.py  requirements.txt  server.py
scripts/: smoke_mcp.py
searxng/: settings.yml
skills/agent-search-gateway/: SKILL.md
tests/: test_cache_quota.py
